--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
+<video controls>
 <video src="videofile.ogg" autoplay poster="posterimage.jpg">
   <source src="https://" type="video/">
   <source src="https://" type="video/">
 </video>
+
     <!-- your code here! See README.md for deliverables -->
 
   </body>
