--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>Exceptional</h1>
     <h2>Realty Group</h2>
 
-<video autoplay="true" controls>
+<video autoplay="true" width="600px" height="400px" controls>
   <source src="https://" type="video/">
   <source src="https://" type="video/">
 </video>
