Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h2>Realty Group</h2>
 
 <video autoplay="true" width="600px" height="400px" controls>
-  <source src="video/mp4" type="video/">
+  <source src="video/mp4" type="video/mp4">
   <source src="https://" type="video/">
 </video>
 
