--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <video autoplay="true" width="600px" height="400px" controls>
   <source src="video/mp4" type="video/mp4">
-  <source src="https://" type="video/">
+  <source src="https://" type="video/ogg">
 </video>
 
     <!-- your code here! See README.md for deliverables -->
